Ajeitado logo versão celular

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                 <img src="img/logo.png"/></div>
                 <div>
                     <input type="text" name="search" placeholder="Pesquisar" required>
+                <img src="img/logo.png" alt="">
                 </div>
             <div>
                 <ion-icon name="paper-plane-outline"></ion-icon>
